<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TelaCadastro"
    android:orientation="vertical">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/edt_novoEmail"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_cadEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edt_novaSenha"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadaSenha"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_Nome"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/edt_novoNome"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edt_novaIdade"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadIdade"
        android:layout_marginTop="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_cadastrar"
        android:text="@string/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/verdeClaro" />

    <Button
        android:id="@+id/btn_voltar"
        android:text="@string/btn_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_200" />
</LinearLayout>