<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TelaLogin"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_email"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtSenha"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/edt_senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnEntrar"
        android:text="@string/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/azul_claro" />

    <Button
        android:id="@+id/btnCadastro"
        android:text="@string/btn_novo_cada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/verdeClaro" />


    <Button
        android:id="@+id/btnSair"
        android:text="@string/btn_sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_200" />
</LinearLayout>